sources/TileDB.CSharp/Interop/Methods.cs


        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_set_data_buffer(tiledb_ctx_t* ctx, tiledb_query_t* query, [NativeTypeName("const char *")] sbyte* name, void* buffer, [NativeTypeName("uint64_t *")] ulong* buffer_size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_set_offsets_buffer(tiledb_ctx_t* ctx, tiledb_query_t* query, [NativeTypeName("const char *")] sbyte* name, [NativeTypeName("uint64_t *")] ulong* buffer, [NativeTypeName("uint64_t *")] ulong* buffer_size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_set_validity_buffer(tiledb_ctx_t* ctx, tiledb_query_t* query, [NativeTypeName("const char *")] sbyte* name, [NativeTypeName("uint8_t *")] byte* buffer, [NativeTypeName("uint64_t *")] ulong* buffer_size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_data_buffer(tiledb_ctx_t* ctx, tiledb_query_t* query, [NativeTypeName("const char *")] sbyte* name, void** buffer, [NativeTypeName("uint64_t **")] ulong** buffer_size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_offsets_buffer(tiledb_ctx_t* ctx, tiledb_query_t* query, [NativeTypeName("const char *")] sbyte* name, [NativeTypeName("uint64_t **")] ulong** buffer, [NativeTypeName("uint64_t **")] ulong** buffer_size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_validity_buffer(tiledb_ctx_t* ctx, tiledb_query_t* query, [NativeTypeName("const char *")] sbyte* name, [NativeTypeName("uint8_t **")] byte** buffer, [NativeTypeName("uint64_t **")] ulong** buffer_size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_set_layout(tiledb_ctx_t* ctx, tiledb_query_t* query, tiledb_layout_t layout);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_set_condition(tiledb_ctx_t* ctx, tiledb_query_t* query, [NativeTypeName("const tiledb_query_condition_t *")] tiledb_query_condition_t* cond);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_finalize(tiledb_ctx_t* ctx, tiledb_query_t* query);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_submit_and_finalize(tiledb_ctx_t* ctx, tiledb_query_t* query);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_query_free(tiledb_query_t** query);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_submit(tiledb_ctx_t* ctx, tiledb_query_t* query);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_has_results(tiledb_ctx_t* ctx, tiledb_query_t* query, [NativeTypeName("int32_t *")] int* has_results);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_status(tiledb_ctx_t* ctx, tiledb_query_t* query, tiledb_query_status_t* status);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_type(tiledb_ctx_t* ctx, tiledb_query_t* query, tiledb_query_type_t* query_type);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_layout(tiledb_ctx_t* ctx, tiledb_query_t* query, tiledb_layout_t* query_layout);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_array(tiledb_ctx_t* ctx, tiledb_query_t* query, tiledb_array_t** array);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_est_result_size(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_query_t *")] tiledb_query_t* query, [NativeTypeName("const char *")] sbyte* name, [NativeTypeName("uint64_t *")] ulong* size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_est_result_size_var(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_query_t *")] tiledb_query_t* query, [NativeTypeName("const char *")] sbyte* name, [NativeTypeName("uint64_t *")] ulong* size_off, [NativeTypeName("uint64_t *")] ulong* size_val);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_est_result_size_nullable(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_query_t *")] tiledb_query_t* query, [NativeTypeName("const char *")] sbyte* name, [NativeTypeName("uint64_t *")] ulong* size_val, [NativeTypeName("uint64_t *")] ulong* size_validity);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_est_result_size_var_nullable(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_query_t *")] tiledb_query_t* query, [NativeTypeName("const char *")] sbyte* name, [NativeTypeName("uint64_t *")] ulong* size_off, [NativeTypeName("uint64_t *")] ulong* size_val, [NativeTypeName("uint64_t *")] ulong* size_validity);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_fragment_num(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_query_t *")] tiledb_query_t* query, [NativeTypeName("uint32_t *")] uint* num);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_fragment_uri(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_query_t *")] tiledb_query_t* query, [NativeTypeName("uint64_t")] ulong idx, [NativeTypeName("const char **")] sbyte** uri);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_fragment_timestamp_range(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_query_t *")] tiledb_query_t* query, [NativeTypeName("uint64_t")] ulong idx, [NativeTypeName("uint64_t *")] ulong* t1, [NativeTypeName("uint64_t *")] ulong* t2);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_get_subarray_t(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_query_t *")] tiledb_query_t* query, tiledb_subarray_t** subarray);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_condition_alloc(tiledb_ctx_t* ctx, tiledb_query_condition_t** cond);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_query_condition_free(tiledb_query_condition_t** cond);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_condition_init(tiledb_ctx_t* ctx, tiledb_query_condition_t* cond, [NativeTypeName("const char *")] sbyte* attribute_name, [NativeTypeName("const void *")] void* condition_value, [NativeTypeName("uint64_t")] ulong condition_value_size, tiledb_query_condition_op_t op);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_condition_combine(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_query_condition_t *")] tiledb_query_condition_t* left_cond, [NativeTypeName("const tiledb_query_condition_t *")] tiledb_query_condition_t* right_cond, tiledb_query_condition_combination_op_t combination_op, tiledb_query_condition_t** combined_cond);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_query_condition_negate(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_query_condition_t *")] tiledb_query_condition_t* cond, tiledb_query_condition_t** negated_cond);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_array_consolidate(tiledb_ctx_t* ctx, [NativeTypeName("const char *")] sbyte* array_uri, tiledb_config_t* config);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_array_vacuum(tiledb_ctx_t* ctx, [NativeTypeName("const char *")] sbyte* array_uri, tiledb_config_t* config);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_object_type(tiledb_ctx_t* ctx, [NativeTypeName("const char *")] sbyte* path, tiledb_object_t* type);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_object_remove(tiledb_ctx_t* ctx, [NativeTypeName("const char *")] sbyte* path);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int tiledb_object_move(tiledb_ctx_t* ctx, [NativeTypeName("const char *")] sbyte* old_path, [NativeTypeName("const char *")] sbyte* new_path);
